Add Egreta editor and thesis export/diagnostics
Introduce a new EgretaEditorController to support bulk editing of Egreta documents (Excel parsing, dry-run preview, and optional PUT updates) and an accompanying REST proxy. Refactor ExternalOrganizationController to replace SearxNG with a generic web-search flow (rename config keys, timeouts, and parsers), improve country catalog building (classification-scheme fallback and counts), and tighten AI prompts to require web-search when confidence is low. Extend StudentThesisController with advanced filtering, pagination helpers, an /export Excel endpoint, and a /diagnose endpoint to scan DB corruption; add helper methods for formatting supervisors and constructing filtered queries. Also add utility script check_nature_all.py and test logs, update web assets and configuration to support these features, and adjust related model/repository/test changes.